[B]Version 0.3.6 - 28 Oct 2016[/B]
- Mersalaayitten fix
- Categories in Live Malayalam TV

[B]Version 0.3.5 - 11 Oct 2016[/B]
- Make Kodi 15 compatible
- Make Tamilyogi Scraper compatible on Android

[B]Version 0.3.4 - 10 Oct 2016[/B]
- Fix APKLand Scraper

[B]Version 0.3.3 - 5 Oct 2016[/B]
- Fix MovieFisher Scraper
- Fix Mersalaayitten Scraper
- Fix APKLand scraper


[B]Version 0.3.2 - 1 Oct 2016[/B]
- Fix Olangal Scraper
- Fix ABCMalayalam Scraper
- Get ready for Krypton by removing TLS1.2 binary modules
- Filmlinks4u scraper will now work only on Krypton Beta 2 or above

[B]Version 0.3.1 - 27 Sep 2016[/B]
- Option in settings to diable unwanted scrapers
- TamilYogi, New Scraper
- Tamil Catchup TV fixes
- ThiruttuVCD TV Show fixes
- RunTamil fixes
- APKLand Live TV fixes

[B]Version 0.3.0 - 19 Sep 2016[/B]
- Tamil Catchup TV added

[B]Version 0.2.9 - 18 Sep 2016[/B]
- YoDesi Catchup TV added
- Remove bundled html5lib and six

[B]Version 0.2.8 - 6 Sep 2016[/B]
- Malayalam Live TV added
- Moviefisher Domain change


[B]Version 0.2.7 - 4 Sep 2016[/B]
- APKLand Tamil Live TV added
- Tamilgun Domain change
- New site Thiruttuvcds

[B]Version 0.2.6 - 20 Aug 2016[/B]
- Fix Filmlinks parser due to site changes

[B]Version 0.2.5 - 18 Aug 2016[/B]
- Fix run tamil parser due to site changes

[B]Version 0.2.4 - 16 Aug 2016[/B]
- Fix parsers due to site changes

[B]Version 0.2.3 - 12 Aug 2016[/B]
- Fix parser errors in RedMovies
- Add RunTamil Scraper

[B]Version 0.2.2 - 9 Aug 2016[/B]
- Fix parser errors in Android Platform
- Add MovieFisher Scraper

[B]Version 0.2.1 - 7 Aug 2016[/B]
- Fix thumbnails in Tamilgun
- Filmlinks4u Domain change fix

[B]Version 0.2.0 - 5 Aug 2016[/B]
- First release